<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="E_HallADC" Id="{33b20447-d1ed-4578-8fc7-7d6dd45434e7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE E_HallADC :
(
	ADC0 :=	0, (* Hall sensors 0 through 7 inclusive, ADC module MIO-00. *)
	ADC1 :=	1  (* Hall sensors 8 through 14 inclusive, ADC module MIO-01. *)
) DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>