<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_AdcDebug" Id="{80258224-05fe-46de-938b-aa5872be3d45}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_AdcDebug :
STRUCT
	cycleCounter: UDINT;
	hallId: DINT;
	adcNo: DINT;
	numEvents: DINT;
	prevSysClock: ULINT;
	curSysClock: ULINT;
	eventTime: ULINT;
	eventState: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>