<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_StartTimes" Id="{56f3950d-b1f8-486c-9fe6-86729093e7cc}">
    <Declaration><![CDATA[(* Various times collected at the start of a blade set motion.*)
TYPE ST_StartTimes :
STRUCT
	ptpTime: T_DCTIME64; (* External PTP time from the EL6688 module. *)
	adcDcTime: ARRAY [E_HallADC.ADC0 .. E_HallADC.ADC1] OF T_DCTIME64;  (* DC clock times from the Hall ADCs. *)
	plcDcTime: T_DCTIME64;  (* DC clock time of this PLC task. *)
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>